--- a/index.html
+++ b/index.html
@@ -46,14 +46,15 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
+        <img src="assets/img/profile-img.png" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Neil Dave</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-          <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
+          <a href="https://www.linkedin.com/in/neil-dave/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://github.com/Neildave999/" class="facebook"><i class="bx bxl-github"></i></a>
+          <a href="https://medium.com/@theneildave" class="google-plus"><i class="bx bxl-medium"></i></a>
+          <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>          
           <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-          <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          
         </div>
       </div>
 
@@ -63,6 +64,8 @@
           <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
           <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
           <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
+          <li><a href="#appointment" class="nav-link scrollto"><i class="bx bx-chat"></i> <span>Appointment</span></a></li>
+          <li><a href="#blog" class="nav-link scrollto"><i class="bx bx-blogger"></i> <span>Blog</span></a></li>
           <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li>
           <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
         </ul>
@@ -74,7 +77,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Neil Dave</h1>
-      <p>I'm <span class="typed" data-typed-items="Data Scientist, Machine Learning Engg., Freelancer, Photographer"></span></p>
+      <p>I'm <span class="typed" data-typed-items="Data Scientist, ML Engineer, Freelancer, Photographer"></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -91,7 +94,7 @@
 
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
-            <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
+            <img src="assets/img/profile-img.png" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Data Scientist</h3>
@@ -187,7 +190,20 @@
         <div class="row skills-content">
 
           <div class="col-lg-6" data-aos="fade-up">
-
+            <!-- custom -->
+            <!-- <div class="progressbar" data-percentage="75">
+              <svg class="progressbar__svg">
+                <circle cx="80" cy="80" r="70" class="progressbar__svg-circle circle-html shadow-html"> </circle>
+              </svg>
+              <span class="progressbar__text shadow-html">MLOPS</span>
+            </div>
+            <div class="progressbar" data-percentage="90">
+              <svg class="progressbar__svg">
+                <circle cx="80" cy="80" r="70" class="progressbar__svg-circle circle-html shadow-html"> </circle>
+              </svg>
+              <span class="progressbar__text shadow-html">Python</span>
+            </div> -->
+            <!-- custom -->
             <div class="progress">
               <span class="skill">HTML <i class="val">100%</i></span>
               <div class="progress-bar-wrap">
@@ -259,21 +275,21 @@
               <ul>
                 <li>Portland par 127,Orlando, FL</li>
                 <li>(123) 456-7891</li>
-                <li>alice.barkley@example.com</li>
+                <li>neildave@protonmail.com</li>
               </ul>
             </div>
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Master of Fine Arts &amp; Graphic Design</h4>
-              <h5>2015 - 2016</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
+              <h4>PGP in AI &amp; Data Science</h4>
+              <h5>2022 - 2023</h5>
+              <p><em>Jio Institute, Navi Mumbai</em></p>
               <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
             </div>
             <div class="resume-item">
-              <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-              <h5>2010 - 2014</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
+              <h4>Bachelor of Technology (Mechanical)</h4>
+              <h5>2013 - 2017</h5>
+              <p><em>Pandit Deendayal Petroleum University, Gandhinagar</em></p>
               <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
             </div>
           </div>
@@ -423,7 +439,65 @@
 
       </div>
     </section><!-- End Portfolio Section -->
+    <!-- ======= Appointment Section ======= -->
+    <section id="appointment" class="appointment">
+      <div class="container">
+        <div class="section-title">
+          <h2>Appointment</h2>
+        </div>
+      </div>
+    </section>
+    <!-- ======= Appointment Ends Section ======= -->
+    <!-- ======= Blog Section ======= -->
+    <section id="blog" class="blog">
+      <div class="container">
+        <div class="section-title">
+          <h2>Blog</h2>
+          <div id="retainable-rss-embed" 
+          data-rss="https://medium.com/feed/retainable,
+          https://medium.com/feed/js-dojo,                https://medium.com/feed/vue-mastery" 
+          data-maxcols="4" 
+          data-layout="slider" 
+          data-poststyle="modal" 
+          data-readmore="Read the rest" 
+          data-buttonclass="btn btn-primary" 
+          data-offset="-200">&#160;
+          </div>
+          <script src="https://medium.com/@vinitshahdeo"></script>
+          <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
+            <div class="swiper-wrapper">
+  
+              <div class="swiper-slide">
+                <div class="testimonial-item" data-aos="fade-up">
+                  <p>
+                    <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                    Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
+                    <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                  </p>
+                  <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
+                  <h3>Saul Goodman</h3>
+                  <h4>Ceo &amp; Founder</h4>
+                </div>
+              </div><!-- End testimonial item -->
+  
+              <div class="swiper-slide">
+                <div class="testimonial-item" data-aos="fade-up" data-aos-delay="100">
+                  <p>
+                    <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                    Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
+                    <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                  </p>
+                  <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
+                  <h3>Sara Wilsson</h3>
+                  <h4>Designer</h4>
+                </div>
+              </div><!-- End testimonial item -->
+            </div>
 
+        </div>
+      </div>
+    </section>
+    <!-- ======= Blog ends Section ======= -->
     <!-- ======= Services Section ======= -->
     <section id="services" class="services">
       <div class="container">
@@ -631,13 +705,13 @@
       <div class="copyright">
         &copy;  Made with ❤️ by <strong><span>Neil Dave</span></strong>
       </div>
-      <div class="credits">
+      <!-- <div class="credits"> -->
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/ -->
         <!-- Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> -->
-      </div>
+      <!-- </div> -->
     </div>
   </footer><!-- End  Footer -->
 
