--- a/index.html
+++ b/index.html
@@ -89,7 +89,9 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>Welcome to my personal website!
+            <br><br>I am a seasoned professional with more than half decade years of experience in the dynamic field of Artificial Intelligence, Deep Learning, Machine Learning and Gen AI. As a current Data Scientist, I have successfully led and executed numerous data-driven projects, leveraging cutting-edge technologies to drive innovation and deliver results for <b>Mumbai Indians</b>.
+            <br><br></p>
         </div>
 
         <div class="row">
@@ -98,10 +100,7 @@
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Data Scientist</h3>
-            <p class="fst-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
-            </p>
+
             <div class="row">
               <div class="col-lg-6">
                 <ul>
@@ -121,14 +120,59 @@
               </div>
             </div>
             <p>
-              Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-              Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque. Aliquid amet quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis culpa magni laudantium dolores.
+              My expertise lies in developing and implementing complex machine learning models, designing and managing big data architectures, and utilizing deep learning techniques to uncover insights and drive decision-making. My passion for research and development has allowed me to stay at the forefront of the latest technological advancements and deliver high-impact solutions.
+            <br><br>I am committed to utilizing my skills and experience to help organizations unlock the full potential of their data and drive growth and success. Whether it's through leading a team or working independently, I am dedicated to delivering excellence and exceeding expectations in every project I undertake.
+            
+            </p>
+            <p class="fst-italic">
+              I love exploring new places because I am Foodaholic , like to explore new culture and know the different people. 
             </p>
           </div>
         </div>
 
       </div>
     </section><!-- End About Section -->
+<!-- ======= Publication Section ======= -->
+
+    <section id="Publication" class="facts">
+      <div class="container">
+
+        <div class="section-title">
+          <h2>Publications & research work</h2>
+            <article class="paper">
+                <h4 class="paper-title">Feature Extraction And Classification From Texture 
+                  Image Of Machined Surfaces Using Multilevel Wavelet Decomposition And Logistic Regression</h4>
+                <p class="paper-authors"><strong>Authors:</strong> N.Dave, V.Vakharia, U.Kagathara, M.B. Kiran.</p>
+                <p class="paper-abstract"><strong>Publisher:</strong> Reliability 
+                  and Risk Assessment in Engineering: Proceedings of INCRS-2018</p>
+                <p class="paper-keywords"><strong>Keywords:</strong> Daubechies,Discrete wavelet transform,Logistic regression,Texture</p>
+                <a class="paper-doi" href="https://doi.org/10.1007/978-981-15-3746-2_32"><strong>DOI:</strong> Download Full Paper</a>
+                <!-- <div class="paper-download">
+                    <a href="path-to-your-paper.pdf" target="_blank" download>Download Full Paper</a>
+                </div> -->
+                <br><br>
+                <h4 class="paper-title">Feature extraction and classification of machined 
+                  component texture images using wavelet and artificial intelligence techniques</h4>
+                <p class="paper-authors"><strong>Authors:</strong> N.Dave, V.Vakharia, U.Kagathara, M.B. Kiran.</p>
+                <p class="paper-abstract"><strong>Publisher:</strong> IEEE: 2017 8th International 
+                  Conference on Mechanical and Aerospace Engineering (ICMAE)</p>
+                <p class="paper-keywords"><strong>Keywords:</strong> Entropy, Artificial neural networks, Support vector machines, Surface texture, Surface treatment
+                  </p>
+                <a class="paper-doi" href="https://doi.org/10.1109/ICMAE.2017.8038631"><strong>DOI:</strong> Download Full Paper</a>
+
+                <br><br>
+                <h4 class="paper-title">Economic evaluation of offshore wind power in west coast of India</h4>
+                <p class="paper-authors"><strong>Authors:</strong> N.Dave, G.Nagababu.</p>
+                <p class="paper-abstract"><strong>Publisher:</strong> Proceedings of World Renewable Energy Congress XVI, Perth Australia</p>
+                <p class="paper-keywords"><strong>Keywords:</strong> Offshore Wind Power, Renewal energy, Energy economics
+                  </p>
+                <a class="paper-doi" href=""><strong>DOI:</strong> Download Full Paper</a>
+
+            </article>
+        </div>
+      </div>
+    </section><!-- End Publication Section -->
+
 
     <!-- ======= Facts Section ======= -->
     <section id="facts" class="facts">
@@ -136,7 +180,6 @@
 
         <div class="section-title">
           <h2>Facts</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
         </div>
 
         <div class="row no-gutters">
@@ -273,8 +316,8 @@
               <h4>Neil Dave</h4>
               <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
               <ul>
-                <li>Portland par 127,Orlando, FL</li>
-                <li>(123) 456-7891</li>
+                <li>Bangalore, KA, IN</li>
+                <li>+91-9067816196</li>
                 <li>neildave@protonmail.com</li>
               </ul>
             </div>
@@ -283,22 +326,22 @@
             <div class="resume-item">
               <h4>PGP in AI &amp; Data Science</h4>
               <h5>2022 - 2023</h5>
-              <p><em>Jio Institute, Navi Mumbai</em></p>
+              <p><em>Jio Institute, Navi Mumbai, IN</em></p>
               <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
             </div>
             <div class="resume-item">
               <h4>Bachelor of Technology (Mechanical)</h4>
-              <h5>2013 - 2017</h5>
-              <p><em>Pandit Deendayal Petroleum University, Gandhinagar</em></p>
+              <h5>2013 - 2017</h5><p><i> 9.46/10</i></p>
+              <p><em>Pandit Deendayal Petroleum University, Gandhinagar, IN</em></p>
               <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
             </div>
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Senior graphic design specialist</h4>
-              <h5>2019 - Present</h5>
-              <p><em>Experion, New York, NY </em></p>
+              <h4>Data Scientist</h4>
+              <h5>2022 - Present</h5>
+              <p><em> AI-COE, Jio Platforms Ltd, Bangalore,IN </em></p>
               <ul>
                 <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
                 <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
@@ -307,9 +350,9 @@
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Graphic design specialist</h4>
-              <h5>2017 - 2018</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
+              <h4>Executive</h4>
+              <h5>2018 - 2022</h5>
+              <p><em>Pandit Deendayal Energy University, Gandhinagar, IN</em></p>
               <ul>
                 <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
                 <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
