--- a/index.html
+++ b/index.html
@@ -379,9 +379,10 @@
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-app">App</li>
-              <li data-filter=".filter-card">Card</li>
-              <li data-filter=".filter-web">Web</li>
+              <li data-filter=".filter-app">Gen AI (NLP/LLM)</li>
+              <li data-filter=".filter-card">CV</li>
+              <li data-filter=".filter-web">Classical ML</li>
+              <li data-filter=".filter-rai">Responsible AI</li>
             </ul>
           </div>
         </div>
@@ -496,6 +497,7 @@
       <div class="container">
         <div class="section-title">
           <h2>Blog</h2>
+          <iframe src="https://medium.com/@theneildave/understanding-cross-encoders-revolutionizing-textual-relationships-in-nlp-86b6925a4e08" name="page" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
           <script>
             const mediumRssFeed = "https://medium.com/feed/@theneildave";
             const mediumJsonFeedUrl = `https://api.rss2json.com/v1/api.json?rss_url=${encodeURIComponent(mediumRssFeed)}`;
@@ -713,7 +715,7 @@
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>neildave@protonmail.com</p>
+                <p><a href="mailto:neildave@protonmail.com"></a>neildave@protonmail.com</p>
               </div>
 
               <div class="phone">
@@ -722,7 +724,7 @@
                 <p>+91-9067816196</p>
               </div>
 
-              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
+              <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe> -->
             </div>
 
           </div>
