--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Neil Dave</title>
+  <title>Neil Dave - AI Leader</title>
   <meta content="" name="description">
-  <meta content="" name="keywords">
+  <!-- <meta content="" name="keywords"> -->
+  <meta name="keywords" content="Data Scientist, General AI Engineer, Deep Learning, LLM Engineering, Computer Vision, Machine Learning, Artificial Intelligence, Data Analysis, Neural Networks, Python, Data Mining, Predictive Modeling, AI Research, Big Data Technologies">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -77,7 +78,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Neil Dave</h1>
-      <p>I'm <span class="typed" data-typed-items="Data Scientist, ML Engineer, Gen AI Engineer, Freelancer, Photographer"></span></p>
+      <p>I'm <span class="typed" data-typed-items="Data Scientist, ML Engineer, Gen AI Engineer, Problem Solver, Foodie"></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -90,7 +91,7 @@
         <div class="section-title">
           <h2>About</h2>
           <p>Welcome to my personal website!
-            <br><br>I am a seasoned professional with more than half decade years of experience in the dynamic field of Artificial Intelligence, Deep Learning, Machine Learning and Gen AI. As a current Data Scientist, I have successfully led and executed numerous data-driven projects, leveraging cutting-edge technologies to drive innovation and deliver results for <b>Mumbai Indians</b>.
+            <br><br>I am a seasoned professional with more than half decade years of experience in the dynamic field of Artificial Intelligence, Deep Learning, Machine Learning and Gen AI. I have been helping businesses to turn data into gold (pure profit) with expertise of the Technology. As a current Data Scientist, I have successfully led and executed numerous data-driven projects, leveraging cutting-edge technologies to drive innovation and deliver results for <b>Mumbai Indians</b>.
             <br><br></p>
         </div>
 
@@ -315,11 +316,11 @@
             <div class="resume-item pb-0">
               <h4>Neil Dave</h4>
               <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
-              <ul>
+              <!-- <ul>
                 <li>Bangalore, KA, IN</li>
                 <li>+91-9067816196</li>
                 <li>neildave@protonmail.com</li>
-              </ul>
+              </ul> -->
             </div>
 
             <h3 class="resume-title">Education</h3>
@@ -393,8 +394,8 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <!-- <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a> -->
+                <a href="gen-ai.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -409,7 +410,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
@@ -417,7 +418,7 @@
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
-          </div>
+          </div> -->
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
@@ -439,7 +440,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
@@ -447,7 +448,7 @@
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
-          </div>
+          </div> -->
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
@@ -488,6 +489,18 @@
       <div class="container">
         <div class="section-title">
           <h2>Appointment</h2>
+          <!-- Calendly inline widget begin -->
+          <!-- <div class="calendly-inline-widget" data-url="https://calendly.com/theneildave/30min" style="min-width:320px;height:630px;"></div> -->
+          <div class="calendly-inline-widget"style="min-width:320px;height:630px;">
+          <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" style="min-width:320px;height:630px;"></script>
+          <script>
+            Calendly.initInlineWidget({
+            url: 'https://calendly.com/theneildave',
+            parentElement: document.getElementById('calendly-embed')
+            });
+            </script>
+            </div>
+          <!-- Calendly inline widget end -->
         </div>
       </div>
     </section>
@@ -610,7 +623,7 @@
     </section><!-- End Services Section -->
 
     <!-- ======= Testimonials Section ======= -->
-    <section id="testimonials" class="testimonials section-bg">
+    <!-- <section id="testimonials" class="testimonials section-bg">
       <div class="container">
 
         <div class="section-title">
@@ -634,7 +647,7 @@
               </div>
             </div><!-- End testimonial item -->
 
-            <div class="swiper-slide">
+            <!-- <div class="swiper-slide">
               <div class="testimonial-item" data-aos="fade-up" data-aos-delay="100">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
@@ -645,9 +658,9 @@
                 <h3>Sara Wilsson</h3>
                 <h4>Designer</h4>
               </div>
-            </div><!-- End testimonial item -->
+            </div>End testimonial item -->
 
-            <div class="swiper-slide">
+            <!-- <div class="swiper-slide">
               <div class="testimonial-item" data-aos="fade-up" data-aos-delay="200">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
@@ -658,9 +671,9 @@
                 <h3>Jena Karlis</h3>
                 <h4>Store Owner</h4>
               </div>
-            </div><!-- End testimonial item -->
+            </div>End testimonial item -->
 
-            <div class="swiper-slide">
+            <!--<div class="swiper-slide">
               <div class="testimonial-item" data-aos="fade-up" data-aos-delay="300">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
@@ -671,8 +684,8 @@
                 <h3>Matt Brandon</h3>
                 <h4>Freelancer</h4>
               </div>
-            </div><!-- End testimonial item -->
-
+            </div> End testimonial item -->
+<!-- 
             <div class="swiper-slide">
               <div class="testimonial-item" data-aos="fade-up" data-aos-delay="400">
                 <p>
@@ -684,14 +697,15 @@
                 <h3>John Larson</h3>
                 <h4>Entrepreneur</h4>
               </div>
-            </div><!-- End testimonial item -->
-
+            </div>End testimonial item -->
+<!-- 
           </div>
           <div class="swiper-pagination"></div>
         </div>
 
       </div>
-    </section><!-- End Testimonials Section -->
+    </section> -->
+    <!-- End Testimonials Section -->
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
