--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -7,7 +7,8 @@
 
   <title>Neil Dave</title>
   <meta content="" name="description">
-  <meta content="" name="keywords">
+  <meta name="keywords" content="Data Scientist, General AI Engineer, Deep Learning, LLM Engineering, Computer Vision, Machine Learning, Artificial Intelligence, Data Analysis, Neural Networks, Python, Data Mining, Predictive Modeling, AI Research, Big Data Technologies">
+
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -24,7 +25,7 @@
   <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-..." crossorigin="anonymous" />
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
@@ -117,21 +118,38 @@
             </div>
           </div> -->
 
-          <div class="col-lg-10">
+          <div class="col-lg-12 ">
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
                 <li><strong>Category</strong>: Generative AI - (NLP / LLM)</li>
                 <li><strong>Project Domain</strong>: Sports</li>
-                <li><strong>Technology</strong>: Fast API, Azure, LLM</li>
-                <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
+                <li><strong>Technology</strong>: Python, Fast API, Azure, LLM</li>
+                <li><strong>Project URL</strong>: <a href="#">Private Repo for Client</a></li>
               </ul>
             </div>
+          </div>
+          <!-- <div class="col-lg-5">
+              <div class="portfolio-Techno">
+                <h3>Technology Stack</h3>
+                <ul>
+                  <li> Python, Pytorch, Transformers,Generative AI - (NLP / LLPM)</li>
+                  <li><strong>Project Domain</strong>: Sports</li>
+                  <li><strong>Technology</strong>: Fast API, Azure, LLM</li>
+                  <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li> -->
+                <!-- </ul>
+              </div>
+          </div> -->
             <div class="portfolio-description">
-              <h2>This is an example of portfolio detail</h2>
+              <h2>Portfolio detail</h2>
+
               <p>
-                Implemented end to end project for IPL's top branded team. <br>
-                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+                I have successfully developed an innovative project within the sports domain called CricketGPT. This cutting-edge solution enables users to effortlessly identify key elements such as players, teams, venues, and other relevant terminologies, while seamlessly applying them as filters.
+                <br><br>To accomplish this, I employed the power of Generative Artificial Intelligence (AI) techniques to train a sophisticated model. Through extensive optimization, CricketGPT has surpassed existing State-of-the-Art (SOAT) models in various critical aspects including space efficiency, memory utilization, and inference time.
+                <br><br>By leveraging the capabilities of CricketGPT, users can now experience a streamlined and efficient approach to processing and analyzing cricket-related data. This project stands as a testament to my expertise in both the sports domain and cutting-edge technologies, showcasing my ability to deliver optimal solutions that push the boundaries of what is conventionally achievable.
+                <br><br>With CricketGPT, users can confidently embrace the future of cricket analysis, unlocking new insights and enhancing decision-making processes. Harnessing the potential of Generative AI, this project represents a significant advancement within the sports industry, cementing my position as a proficient professional in the technology space.
+                <!-- Implemented end to end project for IPL's top branded team. <br>
+                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius. -->
               </p>
             </div>
           </div>
