--- a/gen-ai.html
+++ b/gen-ai.html
@@ -107,8 +107,9 @@
             </div>
           </div>
             <div class="portfolio-description">
-              <h2>Portfolio detail</h2>
-
+              <h2>Project details</h2>
+              <h4> Key Highlights</h4>
+              <ui><li>I have single handedly completed the project end-to-end</li></ui>
               <p>
                 I have successfully developed an innovative project within the sports domain called CricketGPT. This cutting-edge solution enables users to effortlessly identify key elements such as players, teams, venues, and other relevant terminologies, while seamlessly applying them as filters.
                 <br><br>To accomplish this, I employed the power of Generative Artificial Intelligence (AI) techniques to train a sophisticated model. Through extensive optimization, CricketGPT has surpassed existing State-of-the-Art (SOAT) models in various critical aspects including space efficiency, memory utilization, and inference time.
