--- a/index.html
+++ b/index.html
@@ -380,9 +380,10 @@
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-app">Gen AI (NLP/LLM)</li>
-              <li data-filter=".filter-card">CV</li>
-              <li data-filter=".filter-web">Classical ML</li>
+              <li data-filter=".filter-ml">Classical ML</li>
+              <li data-filter=".filter-cv">CV</li>
+              <li data-filter=".filter-rai">DL</li>
+              <li data-filter=".filter-genai">Gen AI (NLP/LLM)</li>
               <li data-filter=".filter-rai">Responsible AI</li>
             </ul>
           </div>
@@ -390,9 +391,9 @@
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-genai">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+              <img src="assets/img/ai.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <!-- <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a> -->
                 <a href="gen-ai.html" title="More Details"><i class="bx bx-link"></i></a>
@@ -400,57 +401,57 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-ml">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+              <img src="assets/img/sepsis.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <!-- <a href="assets/img/portfolio/portfolio-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2"><i class="bx bx-plus"></i></a> -->
+                <a href="sepsis.html" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-rai">
+            <div class="portfolio-wrap">
+              <img src="assets/img/rai.jpg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <!-- <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a> -->
+                <a href="rai.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
 
-          <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-dl">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
+              <img src="assets/img/run-prediction.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div> -->
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <!-- <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a> -->
+                <a href="run-prediction.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-cv">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
+              <img src="assets/img/object-detection.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <!-- <a href="assets/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a> -->
+                <a href="cv-object-detection.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
 
-          <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-cv">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
+              <img src="assets/img/cv.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <!-- <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a> -->
+                <a href="cv.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
-          </div> -->
+          </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+          <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
@@ -468,16 +469,16 @@
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
-          </div>
+          </div> -->
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
-            </div>
+            </div> -->
           </div>
 
         </div>
@@ -769,7 +770,7 @@
 
             </div> -->
           <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+            <!-- <form action="forms/contact.php" method="post" role="form" class="php-email-form">
               <div class="row">
                 <div class="form-group col-md-6">
                   <label for="name">Your Name</label>
@@ -794,7 +795,56 @@
                 <div class="sent-message">Your message has been sent. Thank you!</div>
               </div>
               <div class="text-center"><button type="submit">Send Message</button></div>
+            </form> -->
+            <form method="post" action="//submit.form" onSubmit="return validateForm();">
+              <div style="max-width: 400px;">
+              </div>
+              <div style="padding-bottom: 18px;font-size : 24px;">Connect with me</div>
+              <div style="display: flex; padding-bottom: 18px;max-width : 550px;">
+              <div style=" margin-left: 0; margin-right: 1%; width: 49%;">First name<span style="color: red;"> *</span><br/>
+              <input type="text" id="data_2" name="data_2" style="max-width: 100%;" class="form-control"/>
+              </div>
+              <div style=" margin-left: 1%; margin-right: 0; width: 49%;">Last name<span style="color: red;"> *</span><br/>
+              <input type="text" id="data_3" name="data_3" style="max-width: 100%;" class="form-control"/>
+              </div>
+              </div><div style="padding-bottom: 18px;">Email<span style="color: red;"> *</span><br/>
+              <input type="text" id="data_4" name="data_4" style="max-width : 550px;" class="form-control"/>
+              </div>
+              <div style="padding-bottom: 18px;">Message<br/>
+              <textarea id="data_11" false name="data_11" style="max-width : 550px;" rows="6" class="form-control"></textarea>
+              </div>
+              <div style="padding-bottom: 18px;"><input name="skip_Submit" value="Submit" type="submit"/></div>
+              <div>
+              <!-- <div style="float:right"><a href="https://www.100forms.com" id="lnk100" title="form to email"></a></div> -->
+              <script src="https://www.100forms.com/js/FORMKEY:UPRH2L94WRJD/SEND:neildave999@gmail.com" type="text/javascript"></script>
+              </div>
             </form>
+            <script type="text/javascript">
+              function validateForm() {
+              if (isEmpty(document.getElementById('data_2').value.trim())) {
+              alert('First name is required!');
+              return false;
+              }
+              if (isEmpty(document.getElementById('data_3').value.trim())) {
+              alert('Last name is required!');
+              return false;
+              }
+              if (isEmpty(document.getElementById('data_4').value.trim())) {
+              alert('Email is required!');
+              return false;
+              }
+              if (!validateEmail(document.getElementById('data_4').value.trim())) {
+              alert('Email must be a valid email address!');
+              return false;
+              }
+              return true;
+              }
+              function isEmpty(str) { return (str.length === 0 || !str.trim()); }
+              function validateEmail(email) {
+              var re = /^([\w-]+(?:\.[\w-]+)*)@((?:[\w-]+\.)*\w[\w-]{0,66})\.([a-z]{2,15}(?:\.[a-z]{2})?)$/i;
+              return isEmpty(email) || re.test(email);
+              }
+              </script>
           </div>
 
         </div>
