--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
               <h4>Data Scientist</h4>
-              <h5>2022 - Present</h5>
+              <h5>2023 - Present</h5>
               <p><em> AI-COE, Jio Platforms Ltd, Bangalore,IN </em></p>
               <ul>
                 <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
@@ -359,6 +359,14 @@
                 <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
                 <li>Recommended and consulted with clients on the most appropriate graphic design</li>
                 <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>Executive</h4>
+              <h5>2017 - 2018</h5>
+              <p><em>Spectrum Talent Management, Gandhinagar, IN</em></p>
+              <ul>
+                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
               </ul>
             </div>
           </div>
