--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <ul>
           <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
-          <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
+          <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Experience</span></a></li>
           <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
           <li><a href="#appointment" class="nav-link scrollto"><i class="bx bx-chat"></i> <span>Appointment</span></a></li>
           <li><a href="#blog" class="nav-link scrollto"><i class='bx bxl-blogger'></i><span>Blog</span></a></li>
@@ -346,6 +346,12 @@
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
+              <h4>Certificate in AI &amp; Data Science</h4>
+              <h5>2022 - 2023</h5>
+              <p><em>National Technology University, Singapore</em></p>
+              <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
+            </div>
+            <div class="resume-item">
               <h4>PGP in AI &amp; Data Science</h4>
               <h5>2022 - 2023</h5>
               <p><em>Jio Institute, Navi Mumbai, IN</em></p>
@@ -353,7 +359,7 @@
             </div>
             <div class="resume-item">
               <h4>Bachelor of Technology (Mechanical)</h4>
-              <h5>2013 - 2017</h5><p><i> 9.46/10</i></p>
+              <h5>2013 - 2017</h5>
               <p><em>Pandit Deendayal Petroleum University, Gandhinagar, IN</em></p>
               <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
             </div>
