--- a/gen-ai.html
+++ b/gen-ai.html
@@ -101,17 +101,23 @@
               <ul>
                 <li><strong>Category</strong>: Generative AI - (NLP / LLM)</li>
                 <li><strong>Project Domain</strong>: Sports</li>
-                <li><strong>Technology</strong>: Python, Fast API, Azure, LLM</li>
+                <li><strong>Technology</strong>: Python , Open AI , Huggingface, Fast API, Azure, LLM, LLMOPs</li>
                 <li><strong>Project URL</strong>: <a href="#">Private Repo for Client</a></li>
               </ul>
             </div>
           </div>
             <div class="portfolio-description">
               <h2>Project details</h2>
-              <h4> Key Highlights</h4>
-              <ui><li>I have single handedly completed the project end-to-end</li></ui>
+              <h4> Business Problem </h4>
               <p>
-                I have successfully developed an innovative project within the sports domain called CricketGPT. This cutting-edge solution enables users to effortlessly identify key elements such as players, teams, venues, and other relevant terminologies, while seamlessly applying them as filters.
+                Cricket is gaining more popularity in the world of sports after Football. There was need of Exculsive search mechanism for sports domain to respond back with relevant respond in cricket terminologies for Global Franchise.
+              <h4> Key Highlights</h4>
+              <ui><li>Deployed this LLM Project end-to-end.</li></ui>
+              <ui><li>Training Dataset is created using LLM.</li></ui>
+              <ui><li>Inference time for 1 query in SOAT will be able extract 18 queries result from our own developed model.</li></ui>
+              <br> 
+              <p>
+                I have successfully developed an innovative project within the sports domain called CricketGPT. This cutting-edge solution enables users to effortlessly identify key elements such as players, teams, venues, and other relevant terminologies, while seamlessly applying them as filters through LLMOPs.
                 <br><br>To accomplish this, I employed the power of Generative Artificial Intelligence (AI) techniques to train a sophisticated model. Through extensive optimization, CricketGPT has surpassed existing State-of-the-Art (SOAT) models in various critical aspects including space efficiency, memory utilization, and inference time.
                 By leveraging the capabilities of CricketGPT, users can now experience a streamlined and efficient approach to processing and analyzing cricket-related data. This project stands as a testament to my expertise in both the sports domain and cutting-edge technologies, showcasing my ability to deliver optimal solutions that push the boundaries of what is conventionally achievable.
                 <br><br>With CricketGPT, users can confidently embrace the future of cricket analysis, unlocking new insights and enhancing decision-making processes. Harnessing the potential of Generative AI, this project represents a significant advancement within the sports industry, cementing my position as a proficient professional in the technology space.
