--- a/run-prediction.html
+++ b/run-prediction.html
@@ -101,7 +101,7 @@
               <ul>
                 <li><strong>Category</strong>: Deep Learning</li>
                 <li><strong>Project Domain</strong>: Sports</li>
-                <li><strong>Technology</strong>: Python, Azure, Custom Neural Network</li>
+                <li><strong>Technology</strong>: Python, Azure, Custom Neural Network, Embeddings</li>
                 <li><strong>Project URL</strong>: <a href="#">Private Repo for Client</a></li>
               </ul>
             </div>
