--- a/cv.html
+++ b/cv.html
@@ -108,13 +108,21 @@
           </div>
             <div class="portfolio-description">
               <h2>Project details</h2>
-
+              <h4> Business Problem </h4>
               <p>
+                1 in every 7-cancer patients is a case of breast cancer. Detection of breast cancer is a challenging task and can be life-threatening if not detected at an early stage. Currently, Mammography is the most popular method for the detection of breast cancer and exposes the patient to radiation and causes discomfort. 
+              <h4> Key Highlights</h4>
+              <ui><li>Utilized capabilities of Multi modal model with image & structure data to create robust model with multifacets data points.</li></ui>
+              <ui><li>Deployed this Deep Learning model to capture more data for further fine tune.</li></ui>
+              <ui><li>Found an alternative solution to screening via thermal imaging which is a non-contact cost-effective procedure, while maintaining equal or higher levels of sensitivity.</li></ui>
+              <!-- <ui><li>Working with H20 ML & Hyperparameter tuning of top 5 algorithm to yield the best results.</li></ui> -->
+              <br> 
+              <!-- <p>
                 I have successfully developed an innovative project within the sports domain called CricketGPT. This cutting-edge solution enables users to effortlessly identify key elements such as players, teams, venues, and other relevant terminologies, while seamlessly applying them as filters.
                 <br><br>To accomplish this, I employed the power of Generative Artificial Intelligence (AI) techniques to train a sophisticated model. Through extensive optimization, CricketGPT has surpassed existing State-of-the-Art (SOAT) models in various critical aspects including space efficiency, memory utilization, and inference time.
                 By leveraging the capabilities of CricketGPT, users can now experience a streamlined and efficient approach to processing and analyzing cricket-related data. This project stands as a testament to my expertise in both the sports domain and cutting-edge technologies, showcasing my ability to deliver optimal solutions that push the boundaries of what is conventionally achievable.
                 <br><br>With CricketGPT, users can confidently embrace the future of cricket analysis, unlocking new insights and enhancing decision-making processes. Harnessing the potential of Generative AI, this project represents a significant advancement within the sports industry, cementing my position as a proficient professional in the technology space.
-              </p>
+              </p> -->
             </div>
           </div>
 
