added news detail

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <li><a href="#appointment" class="nav-link scrollto"><i class="bx bx-chat"></i> <span>Appointment</span></a></li>
           <!-- <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li> -->
           <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
-          <li><a href="news.html" class="nav-link scrollto"><i class="bx bx-server"></i> <span>AI NEWS</span></a></li>
+          <!-- <li><a href="news.html" class="nav-link scrollto"><i class="bx bx-server"></i> <span>AI NEWS</span></a></li> -->
         </ul>
       </nav><!-- .nav-menu -->
     </div>
