--- a/lead.html
+++ b/lead.html
@@ -50,7 +50,8 @@
 <body>
   <div class="container">
     <h1>Get Your Free Resume Template</h1>
-    <form id="leadForm">
+    <!-- <form id="leadForm"> -->
+    <form id="leadForm" action="/send-email" method="POST">
       <input type="text" id="name" placeholder="Your Name" required>
       <input type="tel" id="phone" pattern="\d{10}" placeholder="Phone Number" required>
       <input type="email" id="email" placeholder="Your Email" required>
