--- a/run-prediction.html
+++ b/run-prediction.html
@@ -63,7 +63,7 @@
         <ul>
           <li><a href="index.html#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="index.html#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
-          <li><a href="index.html#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Experience</span></a></li>
+          <!-- <li><a href="index.html#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Experience</span></a></li> -->
           <li><a href="index.html#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
           <li><a href="index.html#appointment" class="nav-link scrollto"><i class="bx bx-chat"></i> <span>Appointment</span></a></li>
           <li><a href="index.html#blog" class="nav-link scrollto"><i class='bx bxl-blogger'></i><span>Blog</span></a></li>
@@ -108,13 +108,21 @@
           </div>
             <div class="portfolio-description">
               <h2>Project details</h2>
-
+              <h4> Business Problem </h4>
               <p>
+                Cricket is gaining more popularity in the world of sports after Football. There is lot of uncertainity with runs score as it depends on many variable such as weather condition, pitch condition and player skillsets
+              <h4> Key Highlights</h4>
+              <ui><li>Deployed this Regression Project end-to-end.</li></ui>
+              <ui><li>Creating custom model & embedding for more accurate prediction.</li></ui>
+              <ui><li>Score prediction were much accurate than SOAT, current available.</li></ui>
+              <br> 
+
+              <!-- <p>
                 I have successfully developed an innovative project within the sports domain called CricketGPT. This cutting-edge solution enables users to effortlessly identify key elements such as players, teams, venues, and other relevant terminologies, while seamlessly applying them as filters.
                 <br><br>To accomplish this, I employed the power of Generative Artificial Intelligence (AI) techniques to train a sophisticated model. Through extensive optimization, CricketGPT has surpassed existing State-of-the-Art (SOAT) models in various critical aspects including space efficiency, memory utilization, and inference time.
                 By leveraging the capabilities of CricketGPT, users can now experience a streamlined and efficient approach to processing and analyzing cricket-related data. This project stands as a testament to my expertise in both the sports domain and cutting-edge technologies, showcasing my ability to deliver optimal solutions that push the boundaries of what is conventionally achievable.
                 <br><br>With CricketGPT, users can confidently embrace the future of cricket analysis, unlocking new insights and enhancing decision-making processes. Harnessing the potential of Generative AI, this project represents a significant advancement within the sports industry, cementing my position as a proficient professional in the technology space.
-              </p>
+              </p> -->
             </div>
           </div>
 
