--- a/sepsis.html
+++ b/sepsis.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Neil Dave</title>
+  <title>Neil Dave - AI Leader</title>
   <meta content="" name="description">
   <meta name="keywords" content="Data Scientist, General AI Engineer, Deep Learning, LLM Engineering, Computer Vision, Machine Learning, Artificial Intelligence, Data Analysis, Neural Networks, Python, Data Mining, Predictive Modeling, AI Research, Big Data Technologies">
 
@@ -63,7 +63,7 @@
         <ul>
           <li><a href="index.html#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="index.html#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
-          <li><a href="index.html#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Experience</span></a></li>
+          <!-- <li><a href="index.html#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Experience</span></a></li> -->
           <li><a href="index.html#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
           <li><a href="index.html#appointment" class="nav-link scrollto"><i class="bx bx-chat"></i> <span>Appointment</span></a></li>
           <li><a href="index.html#blog" class="nav-link scrollto"><i class='bx bxl-blogger'></i><span>Blog</span></a></li>
@@ -100,8 +100,8 @@
               <h3> Sepsis Prediction</h3>
               <ul>
                 <li><strong>Category</strong>: Classical Machine Learning</li>
-                <li><strong>Project Domain</strong>: Health</li>
-                <li><strong>Technology</strong>: Python, H20 ML, Hyperparameter tuning, Feature Engg., Neural Network</li>
+                <li><strong>Project Domain</strong>: Healthcare</li>
+                <li><strong>Technology</strong>: Python, H20 ML, Hyperparameter tuning, Feature Engg., Neural Network, Classical ML</li>
                 <li><strong>Project URL</strong>: <a href="#">Private Repo for Client</a></li>
               </ul>
             </div>
@@ -116,12 +116,12 @@
               <ui><li>Need to work on Feature Engineering since many variable were present.</li></ui>
               <ui><li>Working with H20 ML & Hyperparameter tuning of top 5 algorithm to yield the best results.</li></ui>
               <br> 
-              <p>
+              <!-- <p>
                 I have successfully developed an innovative project within the sports domain called CricketGPT. This cutting-edge solution enables users to effortlessly identify key elements such as players, teams, venues, and other relevant terminologies, while seamlessly applying them as filters.
                 <br><br>To accomplish this, I employed the power of Generative Artificial Intelligence (AI) techniques to train a sophisticated model. Through extensive optimization, CricketGPT has surpassed existing State-of-the-Art (SOAT) models in various critical aspects including space efficiency, memory utilization, and inference time.
                 By leveraging the capabilities of CricketGPT, users can now experience a streamlined and efficient approach to processing and analyzing cricket-related data. This project stands as a testament to my expertise in both the sports domain and cutting-edge technologies, showcasing my ability to deliver optimal solutions that push the boundaries of what is conventionally achievable.
                 <br><br>With CricketGPT, users can confidently embrace the future of cricket analysis, unlocking new insights and enhancing decision-making processes. Harnessing the potential of Generative AI, this project represents a significant advancement within the sports industry, cementing my position as a proficient professional in the technology space.
-              </p>
+              </p> -->
             </div>
           </div>
 
