--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
           <!-- <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Experience</span></a></li> -->
           <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
           <li><a href="#blog" class="nav-link scrollto"><i class='bx bxl-blogger'></i><span>Blog</span></a></li>
+          <li><a href="#tndtalks" class="nav-link scrollto"><i class="bx bx-podcast"></i> <span>TND Talks</span></a></li>
           <li><a href="#appointment" class="nav-link scrollto"><i class="bx bx-chat"></i> <span>Appointment</span></a></li>
           <!-- <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li> -->
           <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
@@ -618,6 +619,19 @@
       </div>
     </section>
     <!-- ======= Blog ends Section ======= -->
+     <!-- ======= TND Talks ends Section ======= -->
+     <section id="tndtalks" class="tndtalks">
+      <div class="container">
+        <div class="section-title">
+          <h2>TND Talks</h2>
+          <!-- Calendly inline widget begin -->
+          <iframe style="border-radius:12px" src="https://open.spotify.com/embed/show/5yqM8poTUB7dLi4TgNIjBw/video?utm_source=generator&t=0" width="624" height="351" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+          <!-- Calendly inline widget end -->
+        </div>
+      </div>
+    </section>
+
+    <!-- ======= TND Talks ends Section ======= -->
     <!-- ======= Appointment Section ======= -->
     <section id="appointment" class="appointment">
       <div class="container">
@@ -791,7 +805,7 @@
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p><a href="mailto:neildave@protonmail.com"></a>neildave@protonmail.com</p>
+                <p><a href="mailto:hello@theneildave.in"></a>hello@theneildave.in</p>
               </div>
 
               <!-- <div class="phone">
