--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <h1 class="text-light"><a href="index.html">Neil Dave</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://www.linkedin.com/in/neil-dave/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-          <a href="https://github.com/Neildave999/" class="facebook"><i class="bx bxl-github"></i></a>
+          <a href="https://github.com/theneildave/" class="facebook"><i class="bx bxl-github"></i></a>
           <a href="https://medium.com/@theneildave" class="google-plus"><i class="bx bxl-medium"></i></a>
           <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>          
           <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
